--- a/style.css
+++ b/style.css
@@ -59,3 +59,13 @@ h1 {
     margin-top: 5px;
     text-align: right;
 }
+
+.date-header {
+    text-align: center;
+    margin: 20px 0 10px;
+    color: #888;
+    font-size: 0.9em;
+    font-weight: bold;
+    position: relative;
+    clear: both;
+}
